--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap");
 body {
   margin: 0;
+  padding: 0;
+  overflow: none;
+  height: 100vh;
+  width: 100vw;
   font-family: "Raleway", serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(to left, rgb(27 20 41), rgb(20 15 35));
 }
